Adding 'else' statement to show times that don't currently have an appointment

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
    <li> {{item.time}}
         {{item.patient["first_name"]}}
    </li>
+    {% else %}
+    <li> {{item.time}}
+   </li>
     {% endif %}
 {% endfor %}
 
