--- a/templates/addAppointment.html
+++ b/templates/addAppointment.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %} {% block content %}
 <form action="" method="POST">
 <input name="appointmentId" type="hidden" value={{appointmentId}}>
+<select class="js-example-basic-single" name="patient_id">
+    {% for patient in patients %}
+    <option value={{patient._id}}>{{patient.first_name}}</option>
+    {% endfor %}
+</select>
 <input type="text" name="time" value={{time}} disabled>
 <button type="submit" name="action">Add appointment</button>
 </form>
