--- a/templates/addAppointment.html
+++ b/templates/addAppointment.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-<form action="" method="POST">
+<form action="{{ url_for('update_appointment') }}" method="POST">
 <input name="appointmentId" type="hidden" value={{appointmentId}}>
 <select class="js-example-basic-single" name="patient_id">
     {% for patient in patients %}
