--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
             	<div class="col-10">
                 {% for time in hour.times %}
                     {% if time.empty == True %}
-                    <div class="row no-gutters slot">
+                    <div class="row no-gutters slot" data-toggle="modal" data-target="#newAppointmentModal">
                         <span>{{time.time}}</span>
                     </div>
                     {% else %}
@@ -24,5 +24,26 @@
                 </div>
 			</div>
         {% endfor %}
+
+<!-- Modal -->
+<div class="modal fade" id="newAppointmentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
