Adding editAppointment modal, and updating existing appointment slots with modal related attributes

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
                     </div>
                     {% else %}
                     {% if time.first_time == True %}
-                        <div class="row no-gutters slot first-time" data-id={{ time.appointment_id }} data-time={{ time.time }}>
+                        <div class="row no-gutters slot first-time" data-id={{ time.appointment_id }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
                         {%  elif time.last_time == True %}
-                            <div class="row no-gutters slot last-time"  data-id={{ time.appointment_id }} data-time={{ time.time }}>
+                            <div class="row no-gutters slot last-time"  data-id={{ time.appointment_id }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
                             {% else %}
-                                <div class="row no-gutters slot" data-id={{ time.appointment_id }} data-time={{ time.time }}>
+                                <div class="row no-gutters slot" data-id={{ time.appointment_id }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
                     {% endif %}
                         	<span>{{time.time}}</span>
                         	<span>{{time.patient_name}}</span>
@@ -25,7 +25,7 @@
 			</div>
         {% endfor %}
 
-<!-- Modal -->
+<!-- New appointment Modal -->
 <div class="modal fade" id="newAppointmentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -42,7 +42,10 @@
             <option value={{patient._id}}>{{patient.name}}</option>
             {% endfor %}
             </select>
-            <input type="text" name="time" value>
+            <label for="startTime">Start time</label>
+            <input id="startTime" type="text" name="start_time" value>
+            <label for="endTime">End time</label>
+            <select id="endTime" class="js-example-basic-single" name="end_time"></select>
             <button type="submit" name="action">Add appointment</button>
 </form>
       </div>
@@ -53,5 +56,39 @@
     </div>
   </div>
 </div>
+
+<!-- Edit appointment Modal -->
+<div class="modal fade" id="editAppointmentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Edit appointment</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form action="{{ url_for('insert_appointment') }}" method="POST">
+            <select class="js-example-basic-single" name="patient_id">
+            {% for patient in patients %}
+            <option value={{patient._id}}>{{patient.name}}</option>
+            {% endfor %}
+            </select>
+            <label for="startTime">Start time</label>
+            <input id="startTime" type="text" name="start_time" value>
+            <label for="endTime">End time</label>
+            <select id="endTime" class="js-example-basic-single" name="end_time"></select>
+            <button type="submit" name="action">Add appointment</button>
+</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 {% endblock %}
