Updating the remove_appointment function to delete appointments according to the objectId

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@
             <select id="endTime" class="js-example-basic-single" name="end_time"></select>
             <button type="submit" name="action">Add appointment</button>
 </form>
+      <a href="{{ url_for('remove_appointment') }}"
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
