--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% block content %}
         {% for hour in calendar %}
+        <div class="calendar-container" slot-id={{ slot_id }}>
             <div class="row no-gutters hour-container">
                 <div class="col-2 hour">{{hour.hour}}</div>
             	<div class="col-10">
@@ -24,6 +25,7 @@
                 </div>
 			</div>
         {% endfor %}
+        </div>
 
 <!-- New appointment Modal -->
 <div class="modal fade" id="newAppointmentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
