Changing the doctor form

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %} {% block content %}
-    <form>
+    <form action="{{ url_for('set_doctor') }}" method="POST">
         <select class="js-example-basic-single" name="doctor_id">
             {% for doctor in doctors %}
             <option value={{doctor._id}}>{{doctor.name}}</option>
             {% endfor %}
         </select>
+        <button type="submit">Go</button>
     </form>
      <div class="calendar-container" data-slotid={{ slot_id }}>
         {% for hour in calendar %}
