Adding input element for flatpickr date picker

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -7,6 +7,14 @@
         </select>
         <button type="submit">Go</button>
     </form>
+
+    <div class="row no-gutters">
+        <input id="flatpickr" name="date" type="text">
+    </div>
+
+
+
+
      <div class="calendar-container" data-slotid={{ slot_id }}>
         {% for hour in calendar %}
             <div class="row no-gutters hour-container">
