Updating the flatpickr input to display the selected date

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -9,7 +9,7 @@
     </form>
 
     <div class="row no-gutters">
-        <input id="flatpickr" name="date" type="text">
+        <input id="flatpickr" name="date" type="text" value={{ date }}>
     </div>
 
 
