Adding start and end time data attributes to appointment slots

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -32,17 +32,22 @@
                     </div>
                     {% else %}
                         {% if time.first_time == True and time.last_time == True %}
-                            <div class="row no-gutters slot only-time" data-id={{ time.appointment_id }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
+                            <div class="row no-gutters slot only-time" data-id={{ time.appointment_id }} data-start={{ time.start_time }} data-end={{ time.end_time }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
+                                <span class="slot-time">{{time.time}}</span>
+                        	    <span class="patient-name">{{time.patient_name}}</span>
+                            </div>
                         {% elif time.first_time == True %}
-                            <div class="row no-gutters slot first-time"  data-id={{ time.appointment_id }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
+                            <div class="row no-gutters slot first-time"  data-id={{ time.appointment_id }} data-start={{ time.start_time }} data-end={{ time.end_time }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
+                                <span class="slot-time">{{time.time}}</span>
+                        	    <span class="patient-name">{{time.patient_name}}</span>
+                            </div>
                         {% elif time.last_time == True %}
-                            <div class="row no-gutters slot last-time" data-id={{ time.appointment_id }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
+                            <div class="row no-gutters slot last-time" data-id={{ time.appointment_id }} data-start={{ time.start_time }} data-end={{ time.end_time }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
+                            </div>
                         {% else %}
-                            <div class="row no-gutters slot middle-time" data-id={{ time.appointment_id }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
+                            <div class="row no-gutters slot middle-time" data-id={{ time.appointment_id }} data-start={{ time.start_time }} data-end={{ time.end_time }} data-time={{ time.time }} data-toggle="modal" data-target="#editAppointmentModal">
+                            </div>
                         {% endif %}
-                        	<span class="slot-time">{{time.time}}</span>
-                        	<span class="patient-name">{{time.patient_name}}</span>
-                        </div>
                     {% endif %}
                 {% endfor %}
                 </div>
