Changing edit modal inputs to spans

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -104,9 +104,9 @@
             {% endfor %}
             </select>
             <label for="startTime">Start time</label>
-            <input id="startTime" type="text" name="start_time" value>
+            <span id="startTime"></span>
             <label for="endTime">End time</label>
-            <select id="endTime" class="js-example-basic-single" name="end_time"></select>
+            <span id="endTime"></span>
             <button type="submit" name="action">Add appointment</button>
         </form>
       <a href>Cancel</a>
