--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -80,7 +80,6 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
@@ -91,17 +90,18 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Edit appointment</h5>
+        <h5 class="modal-title" id="exampleModalCenterTitle">Appointment details</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
+            <label for="doctorName">Doctor</label>
+            <span id="doctorName"></span>
             <label for="startTime">Start time</label>
             <span id="startTime"></span>
             <label for="endTime">End time</label>
             <span id="endTime"></span>
-            <button type="submit" name="action">Add appointment</button>
       <a href>Cancel</a>
       </div>
       <div class="modal-footer">
