Removing 'toString' from the if statement as its no longer necessary

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -2,7 +2,7 @@
     <form action="{{ url_for('set_doctor') }}" method="POST">
         <select class="js-example-basic-single" name="doctor_id">
             {% for doctor in doctors %}
-               {% if doctor._id|string == selected_doctor %}
+               {% if doctor._id == selected_doctor %}
                     <option selected value={{doctor._id}}>{{doctor.name}}</option>
                {% else %}
                     <option value={{doctor._id}}>{{doctor.name}}</option>
