Hiding the datepickers input box!

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,10 @@
+/*********Date picker********************/
+#flatpickr {
+  display: none;
+}
+
+
+
 /*********Appointments grid**************/
 .hour-container {
     height: 100px;
