--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,28 +1,32 @@
 {% extends 'base.html' %} {% block content %}
-    <form action="{{ url_for('set_doctor') }}" method="POST">
-        <select class="js-example-basic-single" name="doctor_id">
+<nav class="row no-gutters">
+    <div class="col-3">
+        <form action="{{ url_for('set_doctor') }}" method="POST">
+            <select class="js-example-basic-single" name="doctor_id">
             {% for doctor in doctors %}
                {% if doctor._id == selected_doctor._id %}
                     <option selected value={{doctor._id}}>{{doctor.name}}</option>
                {% else %}
                     <option value={{doctor._id}}>{{doctor.name}}</option>
                 {% endif %}
-
             {% endfor %}
-        </select>
-        <button type="submit">Go</button>
-    </form>
-
-    <div class="row no-gutters">
+            </select>
+            <button type="submit">Go</button>
+        </form>
+    </div>
+    <div class="col-3">
+        <a href="{{url_for('addPatient')}}">Add patient</a>
+    </div>
+</nav>
+<div class="row">
+    <div class="col-3">
         <input id="flatpickr" name="date" type="text" value={{ date }}>
     </div>
-
-
-     <div class="calendar-container" data-slotid={{ slot_id }}>
+     <div class="calendar-container col-9" data-slotid={{ slot_id }}>
         {% for hour in calendar %}
             <div class="row no-gutters hour-container">
-                <div class="col-2 hour">{{hour.hour}}</div>
-            	<div class="col-10">
+                <div class="col-1 hour">{{hour.hour}}</div>
+            	<div class="col-11">
                 {% for time in hour.times %}
                     {% if time.empty == True %}
                     <div class="row no-gutters slot free-time" data-toggle="modal" data-target="#newAppointmentModal" data-time={{ time.time }}>
@@ -52,6 +56,7 @@
 			</div>
         {% endfor %}
      </div>
+</div>
 <!-- New appointment Modal -->
 <div class="modal fade" id="newAppointmentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
