--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+/*********Nav bar************************/
+nav {
+  height: 80px;
+  border-bottom: 1px solid #d8e1e9 ;
+}
 /*********Date picker********************/
 #flatpickr {
   display: none;
