Adding padding to the top of the main calendar / datepicker section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,10 @@ nav {
 
 
 /*********Appointments grid**************/
+.main-container {
+  padding-top: 10px;
+}
+
 .hour-container {
     height: 100px;
 }
