--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -19,7 +19,7 @@
     </div>
 </nav>
 <div class="row main-container">
-    <div class="col-3">
+    <div class="col-3 datepicker-container">
         <input id="flatpickr" name="date" type="text" value={{ date }}>
     </div>
      <div class="calendar-container col-7" data-slotid={{ slot_id }}>
