Adding some left margin to the datepicker

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,9 @@ nav {
   box-shadow: none;
 }
 
+.datepicker-container {
+  margin-left: 25px;
+}
 
 /*********Appointments grid**************/
 .main-container {
