Changing background color of appointments

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,7 +41,7 @@ nav {
 }
 
 .first-time, .middle-time, .last-time, .only-time {
-  background-color: darkblue;
+  background-color: #7074dd;
   color: white;
 }
 
