Changing the hour background color

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,7 @@ nav {
 }
 
 .hour {
-  background-color: lightgray;
+  background-color: #f6eeee;
   border-bottom: 1px solid white;
   height: 100px;
 }
