Adding padding to slot times and patient names

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,10 @@ nav {
   margin-left: 5px;
 }
 
+.slot-time, .patient-name {
+  padding-left: 5px;
+}
+
 .free-time {
   border-bottom: .5px solid #d8e1e9;
 }
