Centering hour time in parent div

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,14 @@ nav {
   border-bottom: 1px solid white;
   border-radius: 3px;
   height: 100px;
+  position: relative;
+}
+
+.hour div {
+  position: absolute;
+  top: 37%;
+  left: 23%;
+
 }
 
 .slot {
