--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,9 @@ nav {
   height: 25%;
   margin-left: 5px;
 }
+.slot:hover {
+    cursor: pointer;
+}
 
 .slot-time, .patient-name {
   padding-left: 5px;
