Adding border to bottom of some appointment slots

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,6 +62,15 @@ nav {
   color: white;
 }
 
+.first-time, .middle-time, .last-time, .only-time {
+  background-color: #7074dd;
+  color: white;
+}
+
+.last-time, .only-time {
+  border-bottom: 1px solid white;
+}
+
 .first-time, .middle-time {
   border-bottom: 0px;
 }
