--- a/templates/entry_page.html
+++ b/templates/entry_page.html
@@ -1,15 +1,7 @@
 {% extends 'base.html' %}{% block content %}
-    <form action="{{ url_for('set_doctor') }}" method="POST">
-        <select class="js-example-basic-single" name="doctor_id">
-            {% for doctor in doctors %}
-               {% if doctor._id|string == selected_doctor %}
-                    <option selected value={{doctor._id}}>{{doctor.name}}</option>
-               {% else %}
-                    <option value={{doctor._id}}>{{doctor.name}}</option>
-                {% endif %}
-
-            {% endfor %}
-        </select>
-        <button type="submit">Go</button>
-    </form>
+<ul>
+{% for doctor in doctors %}
+<li><a href={{ url_for('set_doctor', doctor_id = doctor._id) }}>{{doctor.name}}</a></li>
+{% endfor %}
+</ul>
 {% endblock %}
