--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,13 @@
+/*********Entry page************************/
+.doc-entry-image {
+  height: 300px;
+  width: 220px;
+}
+
+.doc-entry-name {
+  display: block;
+}
+
 /*********Nav bar************************/
 nav {
   height: 80px;
@@ -32,12 +42,13 @@ nav {
   border-radius: 3px;
   height: 100px;
   position: relative;
+  text-align: center;
 }
 
 .hour div {
-  position: absolute;
+  position: relative;
   top: 37%;
-  left: 23%;
+
 
 }
 
