--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,9 +10,19 @@
 
 /*********Nav bar************************/
 nav {
-  height: 80px;
+  height: 100px;
   border-bottom: 1px solid #d8e1e9 ;
 }
+
+.doc-cal-image {
+  box-sizing: content-box;
+  height: 80px;
+  width: 80px;
+  border-radius: 100%;
+  padding-left: 10px;
+  padding-top: 5px;
+}
+
 /*********Date picker********************/
 #flatpickr {
   display: none;
@@ -27,9 +37,13 @@ nav {
   margin-left: 25px;
 }
 
+.calendar-container {
+  margin-left: 25px;
+}
 /*********Appointments grid**************/
 .main-container {
   padding-top: 10px;
+  margin: 0 auto;
 }
 
 .hour-container {
@@ -97,7 +111,6 @@ nav {
 .only-time {
   border-radius: 5px;
 }
-
 
 /*
 .nav-tabs {
