Changing the text of the Cancel appointment link

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -108,7 +108,7 @@
             <span id="startTime"></span>
             <label for="endTime">End time</label>
             <span id="endTime"></span>
-      <a href>Cancel</a>
+      <a href>Cancel appointment</a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
